fixed code overflow to pre

--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -24,6 +24,10 @@ details.index_details ul {
   margin-top: -12px;
 }
 
+code {
+  overflow-x: scroll;
+}
+
 .flag {
   background-color: rgba(240, 128, 128, 0.7);
 }
